Fix nav button style on Firefox

--- a/scss/layout/_navigation.scss
+++ b/scss/layout/_navigation.scss
@@ -436,7 +436,7 @@ html.nav-open {
 					transition: top .2s ease-in-out, width .2s ease-in-out .2s, opacity 0s .2s, transform .2s ease-in-out .2s;
 
 					&:nth-of-type(1) {
-						top: 8px;
+						top: rem(8px);
 						transform: rotate(45deg);
 					}
 
@@ -445,7 +445,7 @@ html.nav-open {
 					}
 
 					&:nth-of-type(3) {
-						top: -8px;
+						top: rem(-8px);
 						transform: rotate(-45deg);
 					}
 				}
